Add instructions for starting workshop
Removes all the workshop tasks, as they are present in other tags
(task1, task2, etc)